--- a/references.bib
+++ b/references.bib
@@ -61,3 +61,50 @@
 	Title = {Identifying and Eliminating Mislabeled Training Instances},
 	Url = {http://dl.acm.org/citation.cfm?id=1892875.1892994},
 	Year = {1996}}
+	
+@inproceedings{Chau:CHI11,
+	Address = {New York, NY, USA},
+	Author = {Chau, Duen Horng and Kittur, Aniket and Hong, Jason I. and Faloutsos, Christos},
+	Booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+	Date-Added = {2015-02-23 04:18:15 +0000},
+	Date-Modified = {2015-02-23 04:21:33 +0000},
+	Doi = {10.1145/1978942.1978967},
+	Location = {Vancouver, BC, Canada},
+	Month = {May},
+	Organization = {ACM},
+	Pages = {167--176},
+	Publisher = {ACM},
+	Series = {{CHI '11}},
+	Title = {Apolo: Making Sense of Large Network Data by Combining Rich User Interaction and Machine Learning},
+	Url = {http://doi.acm.org/10.1145/1978942.1978967},
+	Year = {2011}}
+
+@inproceedings{Xiao:SA12,
+	Address = {New York, NY, USA},
+	Author = {Xiao, Jianxiong and Russell, Bryan C. and Hays, James and Ehinger, Krista A. and Oliva, Aude and Torralba, Antonio},
+	Booktitle = {Proceedings of the SIGGRAPH Asia 2012 Technical Briefs},
+	Date-Added = {2015-02-23 04:24:40 +0000},
+	Date-Modified = {2015-02-23 04:29:16 +0000},
+	Doi = {10.1145/2407746.2407782},
+	Location = {Singapore, Singapore},
+	Month = {November},
+	Pages = {36:1--36:4},
+	Publisher = {ACM},
+	Series = {{SA '12}},
+	Title = {Basic Level Scene Understanding: From Labels to Structure and Beyond},
+	Url = {http://doi.acm.org/10.1145/2407746.2407782},
+	Year = {2012}}
+
+@article{Amershi:AI14,
+	Author = {Amershi, Saleema and Cakmak, Maya and Knox, W. Bradley  and Kulesza, Todd },
+	Date-Added = {2015-02-26 06:15:24 +0000},
+	Date-Modified = {2015-02-26 06:24:52 +0000},
+	Doi = {http://dx.doi.org/10.1609/aimag.v35i4.2513},
+	Journal = {AI Magazine},
+	Month = {December},
+	Number = {4},
+	Pages = {105--102},
+	Title = {Power to the People: The Role of Humans in Interactive Machine Learning},
+	Volume = {35},
+	Year = {2014}}
+
