--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,42 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for janetyc at 2015-02-26 20:04:42 +0800 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@inproceedings{Farhadi09,
+	Author = {Farhadi, Ali and Endres, Ian and Hoiem, Derek and Forsyth, David},
+	Booktitle = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR},
+	Date-Added = {2015-02-26 12:04:41 +0000},
+	Date-Modified = {2015-02-26 12:04:41 +0000},
+	Title = {Describing objects by their attributes},
+	Year = {2009}}
+
+@inproceedings{Kulesza2014,
+	Acmid = {2557238},
+	Address = {New York, NY, USA},
+	Author = {Kulesza, Todd and Amershi, Saleema and Caruana, Rich and Fisher, Danyel and Charles, Denis},
+	Booktitle = {Proceedings of the 32nd Annual ACM Conference on Human Factors in Computing Systems},
+	Date-Added = {2015-02-26 12:02:35 +0000},
+	Date-Modified = {2015-02-26 12:02:35 +0000},
+	Doi = {10.1145/2556288.2557238},
+	Isbn = {978-1-4503-2473-1},
+	Keywords = {concept evolution, interactive machine learning},
+	Location = {Toronto, Ontario, Canada},
+	Numpages = {10},
+	Pages = {3075--3084},
+	Publisher = {ACM},
+	Series = {CHI '14},
+	Title = {Structured Labeling for Facilitating Concept Evolution in Machine Learning},
+	Url = {http://doi.acm.org/10.1145/2556288.2557238},
+	Year = {2014},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2556288.2557238},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2556288.2557238}}
 
 @inproceedings{Russell:INTERCHI93,
 	Address = {New York, NY, USA},
@@ -13,10 +52,12 @@
 	Series = {{INTERCHI '93}},
 	Title = {The Cost Structure of Sensemaking},
 	Url = {http://doi.acm.org/10.1145/169059.169209},
-	Year = {1993}}
+	Year = {1993},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/169059.169209},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/169059.169209}}
 
 @inproceedings{Steidl:ICASSP05,
-	Author = {Steidl, Stefan and Levit, Michael and Batliner, Anton and N\"{o}th, Elmar  and Niemann, Heinrich},
+	Author = {Steidl, Stefan and Levit, Michael and Batliner, Anton and N\"{o}th, Elmar and Niemann, Heinrich},
 	Booktitle = {Proceedings of the 30th IEEE International Conference on Acoustics, Speech, and Signal Processing.},
 	Date-Added = {2015-02-13 07:08:14 +0000},
 	Date-Modified = {2015-02-13 07:17:07 +0000},
@@ -28,7 +69,8 @@
 	Series = {{ICASSP '05}},
 	Title = {``Of All Things the Measure Is Man'' : Automatic Classification of Emotions and Inter-Labeler Consistency},
 	Volume = {1},
-	Year = {2005}}
+	Year = {2005},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/ICASSP.2005.1415114}}
 
 @phdthesis{Patel:PhDThesis12,
 	Author = {Patel, Kayur Dushyant},
@@ -37,10 +79,11 @@
 	School = {University of Washington},
 	Title = {Lowering the Barrier to Applying Machine Learning},
 	Url = {https://digital.lib.washington.edu/researchworks/handle/1773/22015},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {https://digital.lib.washington.edu/researchworks/handle/1773/22015}}
 
 @techreport{Tsymbal:Techreport04,
-	Author = {Tsymbal, Alexey },
+	Author = {Tsymbal, Alexey},
 	Date-Added = {2015-02-13 08:05:35 +0000},
 	Date-Modified = {2015-02-13 08:08:47 +0000},
 	Institution = {Department of Computer Science},
@@ -49,7 +92,7 @@
 	Year = {2004}}
 
 @inproceedings{Brodley:AAAI96,
-	Author = {Brodley, Carla E. and Friedl, Mark A. },
+	Author = {Brodley, Carla E. and Friedl, Mark A.},
 	Booktitle = {Proceedings of the 13th National Conference on Artificial Intelligence},
 	Date-Added = {2015-02-13 09:30:32 +0000},
 	Date-Modified = {2015-02-13 09:35:21 +0000},
@@ -60,8 +103,9 @@
 	Series = {{AAAI'96}},
 	Title = {Identifying and Eliminating Mislabeled Training Instances},
 	Url = {http://dl.acm.org/citation.cfm?id=1892875.1892994},
-	Year = {1996}}
-	
+	Year = {1996},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=1892875.1892994}}
+
 @inproceedings{Chau:CHI11,
 	Address = {New York, NY, USA},
 	Author = {Chau, Duen Horng and Kittur, Aniket and Hong, Jason I. and Faloutsos, Christos},
@@ -77,7 +121,9 @@
 	Series = {{CHI '11}},
 	Title = {Apolo: Making Sense of Large Network Data by Combining Rich User Interaction and Machine Learning},
 	Url = {http://doi.acm.org/10.1145/1978942.1978967},
-	Year = {2011}}
+	Year = {2011},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1978942.1978967},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1978942.1978967}}
 
 @inproceedings{Xiao:SA12,
 	Address = {New York, NY, USA},
@@ -93,10 +139,12 @@
 	Series = {{SA '12}},
 	Title = {Basic Level Scene Understanding: From Labels to Structure and Beyond},
 	Url = {http://doi.acm.org/10.1145/2407746.2407782},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2407746.2407782},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2407746.2407782}}
 
 @article{Amershi:AI14,
-	Author = {Amershi, Saleema and Cakmak, Maya and Knox, W. Bradley  and Kulesza, Todd },
+	Author = {Amershi, Saleema and Cakmak, Maya and Knox, W. Bradley and Kulesza, Todd},
 	Date-Added = {2015-02-26 06:15:24 +0000},
 	Date-Modified = {2015-02-26 06:24:52 +0000},
 	Doi = {http://dx.doi.org/10.1609/aimag.v35i4.2513},
@@ -106,5 +154,5 @@
 	Pages = {105--102},
 	Title = {Power to the People: The Role of Humans in Interactive Machine Learning},
 	Volume = {35},
-	Year = {2014}}
-
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1609/aimag.v35i4.2513}}
