add Lampert et al. (CVPR 2009) and Hwang et al. (CVPR 2011)

--- a/references.bib
+++ b/references.bib
@@ -2,12 +2,47 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for janetyc at 2015-02-26 20:04:42 +0800 
+%% Created for janetyc at 2015-03-04 17:26:45 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Lampert2009,
+	Abstract = {We study the problem of object classification when training and test classes are disjoint, i.e. no training examples of the target classes are available. This setup has hardly been studied in computer vision research, but it is the rule rather than the exception, because the world contains tens of thousands of different object classes and for only a very few of them image, collections have been formed and annotated with suitable class labels. In this paper, we tackle the problem by introducing attribute-based classification. It performs object detection based on a human-specified high-level description of the target objects instead of training images. The description consists of arbitrary semantic attributes, like shape, color or even geographic information. Because such properties transcend the specific learning task at hand, they can be pre-learned, e.g. from image datasets unrelated to the current task. Afterwards, new classes can be detected based on their attribute representation, without the need for a new training phase. In order to evaluate our method and to facilitate research in this area, we have assembled a new large-scale dataset, ldquoAnimals with Attributesrdquo, of over 30,000 animal images that match the 50 classes in Osherson's classic table of how strongly humans associate 85 semantic attributes with animal classes. Our experiments show that by using an attribute layer it is indeed possible to build a learning object detection system that does not require any training images of the target classes.},
+	Address = {Piscataway, NJ, USA},
+	Author = {Lampert, Christoph H. and Nickisch, Hannes and Harmeling, Stefan},
+	Booktitle = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR)},
+	Date-Added = {2015-03-04 09:26:28 +0000},
+	Date-Modified = {2015-03-04 09:26:28 +0000},
+	Doi = {10.1109/CVPRW.2009.5206594},
+	Event_Name = {IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+	Event_Place = {Miami Beach, FL, USA},
+	Journal = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR 2009)},
+	Language = {en},
+	Month = jun,
+	Organization = {Max-Planck-Gesellschaft},
+	Pages = {951-958},
+	Publisher = {IEEE Service Center},
+	Title = {Learning To Detect Unseen Object Classes by Between-Class Attribute Transfer},
+	Url = {http://www.is.tuebingen.mpg.de/fileadmin/user_upload/files/publications/CVPR2009-Lampert_[0].pdf},
+	Url2 = {http://www.cvpr2009.org/},
+	Web_Url = {http://www.cvpr2009.org/},
+	Year = {2009},
+	Bdsk-Url-1 = {http://www.is.tuebingen.mpg.de/fileadmin/user_upload/files/publications/CVPR2009-Lampert_%5B0%5D.pdf},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1109/CVPRW.2009.5206594}}
+
+@inproceedings{Hwang2011,
+	Author = {Hwang, Sung Ju and Sha, Fei and Grauman, Kristen},
+	Booktitle = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR)},
+	Date-Added = {2015-03-04 09:22:50 +0000},
+	Date-Modified = {2015-03-04 09:22:50 +0000},
+	Pages = {1761-1768},
+	Publisher = {IEEE},
+	Title = {Sharing features between objects and their attributes.},
+	Year = 2011,
+	Bdsk-Url-1 = {http://dblp.uni-trier.de/db/conf/cvpr/cvpr2011.html#HwangSG11}}
 
 @inproceedings{Farhadi09,
 	Author = {Farhadi, Ali and Endres, Ian and Hoiem, Derek and Forsyth, David},
